tests/specs/ecosystem/radix_ui_fork/react_checkbox/0_0_7.test
radix-ui-fork/react-checkbox/0.0.7
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
Check file://<tmpdir>/src/index.ts
error: TS2304 [ERROR]: Cannot find name 'HTMLButtonElement'.
const Checkbox: React.ForwardRefExoticComponent<Omit<CheckboxProps, "ref"> & React.RefAttributes<HTMLButtonElement>> = {} as never;
                                                                                                 ~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/Checkbox.tsx:15:98

